# sthor

./: CMakeLists.txt  LICENSE  Makefile  README  flash.c  flash.h  main.c
cmake/: toolchain.cmake
src/: main.c
